Issue #15855: added docstrings for memoryview methods and data descriptors.